[package]
name = "monero-multisig"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A Monero M-of-N multisig wallet tool for creating wallets, exchanging keys, and co-signing transactions"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/monero-multisig"
keywords = ["monero", "multisig", "cryptocurrency", "wallet"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "2"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
